[project]
name = "apartment-search"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "folium>=0.19.5",
    "googlemaps>=4.10.0",
    "osmnx>=2.0.3",
    "pandas>=2.2.3",
    "plotly>=6.0.1",
    "python-dotenv>=1.0.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
